--- a/index.html
+++ b/index.html
@@ -573,6 +573,8 @@ Error message and password prompt
 
 <li>הכתיבה</li>
 
+<li>המגדלור</li>
+
 <li>המטבח על פי ז'נבייב</li>
 
 <li>המטבח של הנחלה</li>
@@ -9069,10 +9071,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20170607193038305" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
-<div created="20161023184709475" modified="20190204105515128" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20190210153216431" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20190204174956752" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20190210153255674" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9081,7 +9083,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[רן יגיל]] המגדלור [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9101,7 +9103,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190204174942849" title="$:/temp/search">
+<div created="20161023184814872" modified="20190210153129193" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11976,6 +11978,14 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 
 
 </pre>
+</div>
+<div created="20190210161447471" modified="20190210162622963" tags="[[כאן בגטו]] [[מטא בדיון]] [[סיפורים אמיתיים]]" title="המגדלור">
+<pre>
+[img[pictures/hamigdalor.jpg]]
+
+!!![[תומר]]:
+
+בימי החורף האלה, בשעות אחר הצהריים, אני לא פעם צועד עם [[ננו הקטנה|ננו שלי ואני]]  ללבונטין 1 ואנחנו נכנסים [[למגדלור|https://www.hamigdalor.co.il/]] מלאת הפיתויים.</pre>
 </div>
 <div created="20170422140632892" modified="20180604194439135" tags="ארוחות מתכונים" title="המטבח על פי ז'נבייב">
 <pre>[img[pictures/genevieve-food.jpg]]
@@ -16909,11 +16919,12 @@ Fapina''
 
 </pre>
 </div>
-<div created="20170416222531534" modified="20180815065238709" tags="[[אחיות חוץ]] חבר" title="רן יגיל">
+<div created="20170416222531534" modified="20190210160628420" tags="[[אחיות חוץ]] חבר" title="רן יגיל">
 <pre>[img[pictures/rani.jpg]]
 
+!!![[אימא של ג'אז]]:
 
-[[רן יגיל|https://he.wikipedia.org/wiki/%D7%A8%D7%9F_%D7%99%D7%92%D7%99%D7%9C]]</pre>
+מהתמונה [[הזו|https://i.ytimg.com/vi/IPMJ1ptECSk/maxresdefault.jpg]] ניסתה גורה לצייר את [[רן יגיל|https://he.wikipedia.org/wiki/%D7%A8%D7%9F_%D7%99%D7%92%D7%99%D7%9C]], שהוא סופר, עורך, לשונאי, מוציא לאור, מבקר, איש [[עמדה|https://he.wikipedia.org/wiki/%D7%A2%D7%9E%D7%93%D7%94_(%D7%9B%D7%AA%D7%91_%D7%A2%D7%AA_%D7%A1%D7%A4%D7%A8%D7%95%D7%AA%D7%99)]] ואחות אהובה.</pre>
 </div>
 <div created="20190122074755075" modified="20190204184312161" tags="[[סיפורים אמיתיים]]" title="רקפות">
 <pre>[img[pictures/rakafot.jpg]]
