רפי מינץ, אלמנטרי

--- a/index.html
+++ b/index.html
@@ -355,6 +355,8 @@ Error message and password prompt
 
 <li>אלכסנדרה</li>
 
+<li>אלמנטרי</li>
+
 <li>אלן בול</li>
 
 <li>אלפרד</li>
@@ -1164,6 +1166,8 @@ Error message and password prompt
 <li>ריחות</li>
 
 <li>רן יגיל</li>
+
+<li>רפי מינץ</li>
 
 <li>רקפות</li>
 
@@ -9083,7 +9087,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[רן יגיל]] המגדלור [[האחיות כהן]]" title="$:/StoryList">
+<div list="אלמנטרי [[רפי מינץ]] [[האחיות כהן]] המעבדה" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9103,7 +9107,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190210153129193" title="$:/temp/search">
+<div created="20161023184814872" modified="20190215170953164" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10132,6 +10136,13 @@ well,
 !!![[גורה]]:
 
 ביתה הבכורה של [[ז'נבייב]]. היא ילידת 1995, ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].</pre>
+</div>
+<div created="20190214143129976" modified="20190215171252408" tags="סדרות" title="אלמנטרי">
+<pre>[img[pictures/elementary.jpg]]
+
+!!![[הצוות]]:
+
+[[שרלוק|https://www.imdb.com/title/tt2191671/]] בגרסת [[ג'וני לי מילר|https://www.imdb.com/name/nm0001538/?ref_=tt_cl_t1]], צופה בשבעה מסכים בו&quot;ז, כשמבטו מונח על נקודה דמיונית מעל ובמרכז המסכים, כך שהוא למעשה רואה את כולם, ובאם דבר מה חריג קופץ לעיניו, הוא עוצר את התמונה, ויודע שכאן יש דבר. [[ווטסון|https://www.imdb.com/name/nm0005154/?ref_=tt_cl_t2]] המתוקה משלימה את מילותיו. בקאט הבא הם ידברו על זה עם [[מרקוס|https://www.imdb.com/name/nm3586347/?ref_=tt_cl_t3]] [[וגרגסון|https://www.imdb.com/name/nm0001644/?ref_=tt_cl_t4]], והתעלומה נפתרת או תיפתר ממש בקרוב. סידרה של כייף ליגה.</pre>
 </div>
 <div created="20180218104549044" modified="20190126101817950" tags="[[אחיות חוץ]] סרטים סדרות" title="אלן בול">
 <pre>[img[pictures/alan-ball.jpg]]
@@ -11980,8 +11991,7 @@ K-SISTER [[לעולם תהיה|HH]] K-SISTER
 </pre>
 </div>
 <div created="20190210161447471" modified="20190210162622963" tags="[[כאן בגטו]] [[מטא בדיון]] [[סיפורים אמיתיים]]" title="המגדלור">
-<pre>
-[img[pictures/hamigdalor.jpg]]
+<pre>[img[pictures/hamigdalor.jpg]]
 
 !!![[תומר]]:
 
@@ -16925,6 +16935,15 @@ Fapina''
 !!![[אימא של ג'אז]]:
 
 מהתמונה [[הזו|https://i.ytimg.com/vi/IPMJ1ptECSk/maxresdefault.jpg]] ניסתה גורה לצייר את [[רן יגיל|https://he.wikipedia.org/wiki/%D7%A8%D7%9F_%D7%99%D7%92%D7%99%D7%9C]], שהוא סופר, עורך, לשונאי, מוציא לאור, מבקר, איש [[עמדה|https://he.wikipedia.org/wiki/%D7%A2%D7%9E%D7%93%D7%94_(%D7%9B%D7%AA%D7%91_%D7%A2%D7%AA_%D7%A1%D7%A4%D7%A8%D7%95%D7%AA%D7%99)]] ואחות אהובה.</pre>
+</div>
+<div created="20190215131236472" modified="20190215171107316" tags="[[אחיות חוץ]] [[סיפורים אמיתיים]] [[כאן בגטו]] [[אחות כהן]] [[מטא בדיון]]" title="רפי מינץ">
+<pre>[img[pictures/rafi-munz.jpg]]
+
+!!![[הצוות]]:
+
+[[רפי מינץ|https://www.rafim.com/new.htm]] הוא אחות ראשית מקורית, ולמעשה [[בראשית האחיות|המעבדה]] הוא מונה לראש השבט. הוא אומן נפלא ומקורי שמצייר, כותב, מסמל ומפסל.
+
+מהתמונה [[הזו|https://shulashek.net/rafim.com/new/invit_gansh.jpg]] ציירה גורה את הציור.</pre>
 </div>
 <div created="20190122074755075" modified="20190204184312161" tags="[[סיפורים אמיתיים]]" title="רקפות">
 <pre>[img[pictures/rakafot.jpg]]
