--- a/index.html
+++ b/index.html
@@ -263,6 +263,8 @@ Error message and password prompt
 
 <li>logo-bg</li>
 
+<li>max 20</li>
+
 <li>RTLStylesheet</li>
 
 <li>אבא יואל</li>
@@ -9087,7 +9089,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="אלמנטרי [[רפי מינץ]] [[האחיות כהן]] המעבדה" title="$:/StoryList">
+<div list="[[max 20]] [[רביזיה במטבח]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9107,7 +9109,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190215170953164" title="$:/temp/search">
+<div created="20161023184814872" modified="20190217130143677" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9344,6 +9346,16 @@ well,
 </div>
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
+</div>
+<div created="20190217153917796" modified="20190217170825942" tags="[[כאן בגטו]]" title="max 20">
+<pre>
+[img[pictures/max20.jpg]]
+
+!!![[תומר]]:
+
+[[מקס 20 שביהודה הלוי 147|https://www.maxstock.co.il/%d7%a1%d7%a0%d7%99%d7%a4%d7%99%d7%9d/]], זה ממש כמו מחסן פרטי. אני יוצא מהבנין ועולה לפינת החשמונאים, פונה ימינה, חוצה, יורד עוד כמה צעדים, ויש לי כל מה שאני צריך בלכל היותר 20.
+
+</pre>
 </div>
 <div created="20161023181104390" modified="20161113204648316" tags="$:/tags/Stylesheet LTR" title="RTLStylesheet" type="text/css">
 <pre>.tc-tiddler-title,
