--- a/index.html
+++ b/index.html
@@ -9093,7 +9093,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="blue-marble-hood [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9271,13 +9271,12 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20190221150238201" modified="20190221182819074" tags="[[חלומות שחלמנו]] [[קופים ממונעים]] [[אירי וגורה]]" title="blue-marble-hood">
-<pre>
-[img[pictures/blue-marble.jpg]]
+<div created="20190221150238201" modified="20190221183917289" tags="[[חלומות שחלמנו]] [[קופים ממונעים]] [[אירי וגורה]]" title="blue-marble-hood">
+<pre>[img[pictures/blue-marble.jpg]]
 
 !!![[אירי וגורה]]:
 
-אנו שתינו נרגשות - שולחות לחם בצורת כפפה על פני המים הגלובליים, ומציעות את [[בלו-מארבל-הוד|https://www.youtube.com/watch?v=Hp7OrYaXgb8]], כהתחלה של גוף גלובלי, אליו יוכלו אנשים ללא הבדלי דת גזע או מגדר לחבור, באם יעמדו בתנאי קבלה שיקבעו. כמו כן, במדינות שיכריזו על עצמן כ-blue marble friendly, וכחלק מהסכמים עם שני הצדדים, יוכלו אנשי המארבל לחיות חיים מלאים.
+אנו שתינו נרגשות - זורקות כפפה על פני המים הגלובליים, ומציעות את [[בלו-מארבל-הוד|https://www.youtube.com/watch?v=Hp7OrYaXgb8]], כהתחלה של גוף גלובלי, אליו יוכלו אנשים ללא הבדלי דת גזע או מגדר לחבור, באם יעמדו בתנאי קבלה שיקבעו. כמו כן, במדינות שיכריזו על עצמן כ-blue marble friendly, וכחלק מהסכמים עם שני הצדדים, יוכלו אנשי המארבל לחיות חיים מלאים.
 
 הרעיון לבלו מארבל הוא המשך למחשבות של אירי על [[הכפר|גלות]].
 </pre>
