--- a/english.html
+++ b/english.html
@@ -46,7 +46,7 @@ DAMAGE.
 <link id="faviconLink" rel="shortcut icon" href="favicon.ico">
 <title>Coen Sisters' archive — Gesund-Heights, floor -1, chez Stalin</title>
 <!--~~ This is a Tiddlywiki file. The points of interest in the file are marked with this pattern ~~--><!--~~ Raw markup ~~-->
-<link rel="alternate" type="application/rss+xml" title="Coen Sisters" href="english.xml">
+<link rel="alternate" type="application/rss+xml" title="האחיות כהן" href="rss.xml">
 </head>
 <body class="tc-body">
 <!--~~ Static styles ~~-->
@@ -252,6 +252,8 @@ Error message and password prompt
 <li>bg</li>
 
 <li>Coen Sisters</li>
+
+<li>Elementary</li>
 
 <li>logo-bg</li>
 
@@ -8105,8 +8107,8 @@ Error message and password prompt
 <div created="20161023184709475" modified="20180915150316301" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/System</pre>
 </div>
-<div created="20161023184705203" modified="20180915150429457" title="$:/state/tab/sidebar--1835078512">
-<pre>$:/core/ui/SideBar/Open</pre>
+<div created="20161023184705203" modified="20190226092930778" title="$:/state/tab/sidebar--1835078512">
+<pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/EditorToolbar</pre>
@@ -8114,7 +8116,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="Elementary [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8287,6 +8289,14 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 <pre>[img[pictures/coen-sisters.jpg]]
 
 It's a long story... &lt;&lt;heblink [[האחיות כהן]]&gt;&gt;</pre>
+</div>
+<div created="20190226092627784" modified="20190226092924645" tags="[[TV Series]]" title="Elementary">
+<pre>[img[pictures/elementary.jpg]]
+
+!!![[The team]]:
+
+Sherlock, in the Jonny Lee Miller version, watches seven screens at the same time, as his gaze is fixated on an imaginary spot on top of and the center of the screens, so that he practically sees all of them, and if something unusual pops up, he freezes the picture and knows that there's something in it. Sweet Watson completes his words. In the next cut, they'll talk about it with Marcus and Gregson, and the mystery is solved or will be solved really soon. It's a super-fun series.
+&lt;&lt;heblink [[אלמנטרי]]&gt;&gt;</pre>
 </div>
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
