--- a/index.html
+++ b/index.html
@@ -9093,7 +9093,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[הכפר הגלובלי]] blue-marble-hood [[האחיות כהן]]" title="$:/StoryList">
+<div list="אלמנטרי" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10162,12 +10162,13 @@ well,
 
 ביתה הבכורה של [[ז'נבייב]]. היא ילידת 1995, ובקרוב תתחיל ללמוד פסיכולוגיה. בינתיים היא ממלצרת [[בקוסקוס|הקוסקוס]].</pre>
 </div>
-<div created="20190214143129976" modified="20190219160841891" tags="סדרות" title="אלמנטרי">
+<div created="20190214143129976" modified="20190226092433350" tags="סדרות" title="אלמנטרי">
 <pre>[img[pictures/elementary.jpg]]
 
 !!![[הצוות]]:
 
-[[שרלוק|https://www.imdb.com/title/tt2191671/]] בגרסת [[ג'וני לי מילר|https://www.imdb.com/name/nm0001538/?ref_=tt_cl_t1]], צופה בשבעה מסכים בו&quot;ז, כשמבטו מונח על נקודה דמיונית מעל ובמרכז המסכים, כך שהוא למעשה רואה את כולם, ובאם דבר מה חריג קופץ לעיניו, הוא עוצר את התמונה, ויודע שכאן יש דבר. [[ווטסון|https://www.imdb.com/name/nm0005154/?ref_=tt_cl_t2]] המתוקה משלימה את מילותיו. בקאט הבא הם ידברו על זה עם [[מרקוס|https://www.imdb.com/name/nm3586347/?ref_=tt_cl_t3]] [[וגרגסון|https://www.imdb.com/name/nm0001644/?ref_=tt_cl_t4]], והתעלומה נפתרת או תיפתר ממש בקרוב. סידרה של כייף ליגה.</pre>
+[[שרלוק|https://www.imdb.com/title/tt2191671/]] בגרסת [[ג'וני לי מילר|https://www.imdb.com/name/nm0001538/?ref_=tt_cl_t1]], צופה בשבעה מסכים בו&quot;ז, כשמבטו מונח על נקודה דמיונית מעל ובמרכז המסכים, כך שהוא למעשה רואה את כולם, ובאם דבר מה חריג קופץ לעיניו, הוא עוצר את התמונה, ויודע שכאן יש דבר. [[ווטסון|https://www.imdb.com/name/nm0005154/?ref_=tt_cl_t2]] המתוקה משלימה את מילותיו. בקאט הבא הם ידברו על זה עם [[מרקוס|https://www.imdb.com/name/nm3586347/?ref_=tt_cl_t3]] [[וגרגסון|https://www.imdb.com/name/nm0001644/?ref_=tt_cl_t4]], והתעלומה נפתרת או תיפתר ממש בקרוב. סידרה של כייף ליגה.
+&lt;&lt;englink [[Elementary]]&gt;&gt;</pre>
 </div>
 <div created="20180218104549044" modified="20190126101817950" tags="[[אחיות חוץ]] סרטים סדרות" title="אלן בול">
 <pre>[img[pictures/alan-ball.jpg]]
