--- a/english.html
+++ b/english.html
@@ -257,6 +257,8 @@ Error message and password prompt
 
 <li>logo-bg</li>
 
+<li>Radio epgb</li>
+
 </ul>
 </p>
 
@@ -8116,7 +8118,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Elementary [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Radio epgb]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -8285,7 +8287,7 @@ tootdiv a:visited {text-decoration: none; color: #700}</pre>
 <div _canonical_uri="pictures/bjVmMLrT1A6cNJ2g.jpg" created="20161024112200319" modified="20170119202336098" tags="" title="bg" type="image/jpeg">
 <pre></pre>
 </div>
-<div created="20180915085721246" modified="20180915143231726" tags="[[Monkeys with car keys]]" title="Coen Sisters">
+<div created="20180915085721246" modified="20190226094009070" tags="[[Monkeys with car keys]]" title="Coen Sisters">
 <pre>[img[pictures/coen-sisters.jpg]]
 
 It's a long story... &lt;&lt;heblink [[האחיות כהן]]&gt;&gt;</pre>
@@ -8300,6 +8302,15 @@ Sherlock, in the Jonny Lee Miller version, watches seven screens at the same tim
 </div>
 <div _canonical_uri="pictures/newbg-dark.jpg" created="20170607193119061" modified="20170607230143664" tags="" title="logo-bg" type="image/jpeg">
 <pre></pre>
+</div>
+<div created="20190226093702127" modified="20190226094154855" tags="[[Here in the Ghetto]] Music Metafiction" title="Radio epgb">
+<pre>[img[pictures/radio-epgb.jpg]]
+
+!!![[Tomer]]
+: 
+I love invisible places that only open when it's dark, like the radio, located on 7 shadal street. You get in and go down to the dark and good bar, to the touching and energizing music, and the atmosphere. If it's on a Tuesday night, enjoy the killer line that Jazz (which I'm known to be her groupie) is in charge of and performs in – and it's worth checking it out on other days. 
+
+&lt;&lt;heblink [[רדיו epgb]]&gt;&gt;</pre>
 </div>
 
 </div>
