כשנשאר בצק פריך, בתה וריה, טארט טאטן

--- a/index.html
+++ b/index.html
@@ -415,6 +415,8 @@ Error message and password prompt
 
 <li>בשביל הפרחים</li>
 
+<li>בתה וגריגה</li>
+
 <li>בתים</li>
 
 <li>ג'ו ונורמה</li>
@@ -671,6 +673,8 @@ Error message and password prompt
 
 <li>חשמל אבי</li>
 
+<li>טארט טאטן</li>
+
 <li>טוטם</li>
 
 <li>טוני וספה</li>
@@ -804,6 +808,8 @@ Error message and password prompt
 <li>כשהם ישנים</li>
 
 <li>כשהמכוניות היו יפות</li>
+
+<li>כשנשאר בצק פריך</li>
 
 <li>כתב התנועה אשכול-וכמן</li>
 
@@ -9084,7 +9090,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20190221183027209" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20190221183030464" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20190304150153261" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9093,7 +9099,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[רדיו epgb]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[בתה וגריגה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9113,7 +9119,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190226094358965" title="$:/temp/search">
+<div created="20161023184814872" modified="20190305122159950" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10583,6 +10589,16 @@ Is where I want to be
 !!![[תומר]]:
 
 [[חנות הפרחים|http://bishvil-haprachim.co.il/]] המתוקה והיפה ביותר עם הפרחים והסידורים והכלים היפים ביותר בעיר כולה.</pre>
+</div>
+<div created="20190227173320579" modified="20190305121845753" tags="[[כאן בגטו]] מסעדות [[מטא בדיון]]" title="בתה וגריגה">
+<pre>[img[pictures/beta-ve-grega.jpg]]
+
+!!![[תומר]]: 
+
+[[בתה וגריגה|https://www.haaretz.co.il/gallery/night-life/bars/location-1.3446197]], זה כאילו שסבתות כל האזור התכנסו, סיכמו מי מהן תכין מה, וככה נשב בלבונטין 2, [[ננו האכלנית|ננו שלי ואני]] ואני בפינת לבונטין ואלנבי, מול [[המגדלור]], ונאכל כריך, ומלפפון חתוך עם מלח גס, וקוסקוס עם מרק, ומשקה מנטה יאמי, ובסבוסה, והפוך קטן חזק, ועוגיה, ויהיה לנו טעים, ונהנה, ונצחק, ונסיים, ונשלם ממש לא הרבה, ואני אכניס את המתוקה לעגלה, ונעלה במעלה לבונטין. כבר ערב ונחזור הביתה.
+
+
+</pre>
 </div>
 <div created="20180704182012305" modified="20181018193950764" tags="" title="בתים">
 <pre>[img[pictures/batim.jpg]]
@@ -12351,12 +12367,12 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 </pre>
 </div>
-<div created="20161221191920525" modified="20180208154012883" tags="[[אירי טוענת]] מוזיקה" title="הרקוויאם של פורה">
+<div created="20161221191920525" modified="20190301111536904" tags="[[אירי טוענת]] מוזיקה" title="הרקוויאם של פורה">
 <pre>[img[pictures/requiem-faure.jpg]]
 
 אני יושבת כעת על המדרגות שלמרגלות המונמרטר. המחשב הנייד מונח על ברכיי, ואוזניות סוני גדולות ולבנות, דרכן אני שומעת את הרקוויאם של [[faure|https://en.wikipedia.org/wiki/Requiem_(Faur%C3%A9)]] שאני כל כך אוהבת, מכסות את אוזני.
 
-אני מאזינה לביצוע של Choir and Symphony Orchestra of the Ryszard Bukowski Music School in Wrocław, Poland. אני מעדיפה את [[הביצוע הזה|https://www.youtube.com/watch?v=wEgAWjXIxFA]]  גם כשאיני מתבוננת בפניהם היפים והקשובים של חברי התזמורת והמקהלה, ובנברשות התלויות מעל לראשיהם. עוד לא הצלחתי להבין אם תלויות שם שש או שאולי שבע נברשות, שהיו יכולות להתאים לסט של [[חתונת רפאים|http://www.imdb.com/title/tt0121164/]]. הן מוצאות חן בעיני. הן שונות זו מזו בגודל ובצורה אך הן מאותה המשפחה. 
+אני מאזינה לביצוע של [[Choir and Symphony Orchestra of the Ryszard Bukowski Music School in Wrocław, Poland|https://www.afit.edu.pl/]]. אני מעדיפה את [[הביצוע הזה|https://www.youtube.com/watch?v=wEgAWjXIxFA]]  גם כשאיני מתבוננת בפניהם היפים והקשובים של חברי התזמורת והמקהלה, ובנברשות התלויות מעל לראשיהם. עוד לא הצלחתי להבין אם תלויות שם שש או שאולי שבע נברשות, שהיו יכולות להתאים לסט של [[חתונת רפאים|http://www.imdb.com/title/tt0121164/]]. הן מוצאות חן בעיני. הן שונות זו מזו בגודל ובצורה אך הן מאותה המשפחה. 
 
 גם הסטודנטית השביעית משמאל בשורת הבנות של המקהלה מוצאת חן בעיני. עלמה יפהפייה שהייתה יכולה בקלות להיות מלוהקת לאחת מההפקות על פי אחד מספריה של ג'יין אוסטין. עיניה נעות בין מחברת הטקסט שמונחת בידיה לבין המנצח ששר בלי קול. אני נעה בין מסמך הוורד לווידאו, מידי פעם מביטה בנוף העיר. קר, אך אני לבושה היטב. הרוח הקרה מוסיפה לדרמה שבתמונה בה אני נמצאת כעת. אצבעותיו הארוכות של עלם האורגן נעות ברכות על הקלידים, ואני חושבת על כך, שאין לדעת מה מסתתר מאחורי הפנים התמימים והיפים הללו של העלמה השרה את המוסיקה של [[פורה המיוסר|גבריאל פורה]]. צווארה הארוך וגופה נראים ככלי שרת זך לקולה, שערה החלק והבהיר אסוף לאחור ברישול, ושפתי הלב שלה שרות In Paradisum. רגע הריחוף שלאחר השחרור. עיניה הירוקות נפערות וחיוך צדי עולה על שפתיה ואני שרה: בגן עדן, ילד מתוק שלי, הגעת, אלי, לידי, לחיקי, לבי, כאן בקודש, [[גולה|גלות]] תמיד. סגרתי את חלון היו טיוב לפני שהחלו מחיאות הכפיים, והסרתי מעלי את האוזניות. צומת סואן מחשבות המה בראשי, ויותר מכול נמלאתי עצב מכך, שמה שראיתי כשהבטתי על עצמי באופן לא מעורב ככל שאפשר, כמו ש[[רוז'ה]] לימד אותנו, זה עד כמה אני זקוקה לאהבה. הכנסתי את המחשב והאוזניות לתיק הגב. </pre>
 </div>
@@ -12642,6 +12658,43 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 !!![[תומר]]:
 
 אני יוצא מהבניין, משתדל לחצות את הכביש לפני הרמזור ועולה ליהודה הלוי, שם אני יורד ימינה ושוב משתדל לחצות את הכביש לפני הרמזור וממשיך לרדת. אני חוצה את מרמורק, עכשיו זה כבר אבן גבירול 1 ובאבן גבירול 5, שזה כמה חנויות קדימה, נמצאת -   //חשמל אבי// - שזה חשמלאי וחנות חשמל, בה נמצאת אילנה - שבעיקר אוהבת דברים יפים, לשפץ מנורות ורהיטים ולעצב -  וככה קניתי היום מנורת שולחן חדשה מצויינת ובמחיר מעולה.
+
+</pre>
+</div>
+<div created="20190304133114544" modified="20190305122026890" tags="מתכונים [[כשהם ישנים]]" title="טארט טאטן">
+<pre>[img[pictures/tarte-tatin.jpg]]
+
+!!![[אווה]]:
+
+השבוע הזמנתי את האחיות לבראנץ' ורציתי שיהיה מיוחד. כשחשבתי פתאום על [[הטארט טאטן|https://en.wikipedia.org/wiki/Tarte_Tatin]], שלא הכנתי כבר כמה שנים, יכולתי לראות מה אכין עוד.
+
+אופן ההכנה:
+
+1. מכינים [[בצק פריך]] ומניחים אותו במקרר.
+
+2. קולפים, מוציאים את הליבה, וחוצים 6-10 תפוחי עץ (בהתאם לגודל התבנית), שוטפים ומייבשים.
+
+3. במחבת כבדה על להבה גבוהה, ממיסים 75 גרם חמאה עם 2 כוסות סוכר עד לקבלת קרמל. 
+
+4. מעבירים את המחבת ללהבה נמוכה, ומכניסים פנימה את התפוחים. מבשלים על להבה נמוכה במשך 10-15 דקות ומידי כמה דקות הופכים. (התפוחים מוכנים כשמזלג ננעץ במרכז התפוח די בקלות).
+
+5. מוציאים את התפוחים מהמחבת ומניחים אותם בתבנית כשהחלק הפתוח פונה קלפי מעלה. 
+
+6. מרדדים את הבצק הפריך לגודל מעט גדול מגודל התבנית.
+
+7. מניחים את עלה הבצק על התפוחים שבתבנית, ואת שארית הבצק דוחפים לרווח שבין התבנית לתפוחים ([[מהבצק הפריך שנשאר|כשנשאר בצק פריך]] אפשר להכין עוגיות)
+
+8. מחוררים בעזרת המזלג את הבצק בכמה מקומות.
+
+9. אופים בחום בינוני (170 מעלות) 40-50 דקות (עד שהבצק מזהיב/משחים)
+
+10. מוציאים את הטארט מהתנור
+
+11. כעבור 20 דקות הופכים את הטארט על צלחת הגשה.
+
+12. טעים להגיש עם קצפת, גלידת וניל או רוטב וניל.
+
+
 
 </pre>
 </div>
@@ -13667,6 +13720,25 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 ''
 לא השתמשו בחגורות בטיחות''
 </pre>
+</div>
+<div created="20190305120006619" modified="20190305122327813" tags="[[כשהם ישנים]] מתכונים" title="כשנשאר בצק פריך">
+<pre>[img[pictures/keshenishar-bazek-parich.jpg]]
+
+!!![[אווה]]:
+
+1. כשנשאר [[בצק פריך]], אפשר לרדד את השארית למלבן,
+
+2. למרוח עליו שוקולד מהמתכון של [[השמרים קרנץ|שמרים קרנץ]], שוקולד למריחה, ריבה, ממרח שקדים, ממרח אגוזים ..
+
+3. לגלגל את המלבן המרוח לגליל
+
+4. לשים בפריזר ל10-20 דקות
+
+5. לחתוך לעיגולים
+
+6. לאפות בחום בינוני (170 מעלות צלזיוס) כעשרים דקות
+
+7. להניח על צלחת יפה ולהגיש</pre>
 </div>
 <div created="20180508163939540" modified="20180604184154715" tags="[[אירי טוענת]] [[אחיות חוץ]]" title="כתב התנועה אשכול-וכמן">
 <pre>[img[pictures/ctav-tnua.jpg]]
