--- a/index.html
+++ b/index.html
@@ -1195,6 +1195,8 @@ Error message and password prompt
 
 <li>שורצקי</li>
 
+<li>שושני שמרים</li>
+
 <li>שותה עם גורה</li>
 
 <li>שי טרא ליטמן</li>
@@ -9090,7 +9092,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20190221183027209" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20190304150153261" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20190306171721961" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9099,7 +9101,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[בתה וגריגה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[שושני שמרים]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9119,7 +9121,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190305122159950" title="$:/temp/search">
+<div created="20161023184814872" modified="20190306145202966" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -17290,6 +17292,56 @@ Fapina''
 אם אין את זה //[[בשורצקי|https://www.shoretzki.com/]], לא צריך את זה!// 
 
 מחוץ לרדיוס הקרוב ממש, בצד השני של השדרה, במורד שינקין, נמצאת המכולת של המשפחה הכי חמודה ואוהבת על  הוריה וילדיה ועובדיה, אחד אחד משובחים ונבחרים, כולל המוצרים שמסודרים על המדפים, כולל המשלוחים, כולל טיפול פסיכולוגי אצל הקופאי/ת.</pre>
+</div>
+<div created="20190306171103506" modified="20190307061223670" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים" title="שושני שמרים">
+<pre>[img[pictures/shoshanim.jpg]]
+
+!!![[אווה]]:
+
+~ את הבצק מכינים כמה שעות מראש, ומתפיחים במקרר 3 שעות לפחות.
+
+//1//
+
+~במיקסר, עם וו הלישה, במהירות הנמוכה ביותר, מערבבים קודם את החומרים הרטובים ואז את היבשים.
+
+*4 כוסות קמח
+*30 גרם שמרים
+*200 גרם חמאה מומסת
+*3 חלמונים
+*1 כוסות חלב
+*1/3 כוס סוכר
+*1כפיות סוכר וניל
+קורט מלח
+
+//2//
+
+~ מלית אותה מכינים במעבד מזון:
+
+*100 גרם אגוזי פקאן טחונים
+*200 גרם חמאה רכה
+*3/4 כוסות סוכר
+*1 שקית סוכר וניל
+
+//3//
+
+* 1 כוס חלב חם לסוף האפייה עם כפית סוכר וניל
+
+~הכנה:
+
+1. מחלקים את הבצק לארבעה כדורים, ומרדדים כל כדור לעלה מלבני
+
+2.את העלה מורחים במלית האגוזים
+
+3. מגלגלים לרולדה
+
+4. חותכים שושנים
+
+5.מניחים אותן עומדות בתבנית
+
+6.אופים בחום בינוני נמוך כ-40 דקות (השושנים יהיו בצבע אפוי בהיר)
+
+7. מוזגים על השושנים את החלב המורתח עם מעט תמצית או סוכר וניל בתוכו, בערך 2-3 כפות על כל שושנה, וממשיכים לאפות 10 דקות נוספות.
+</pre>
 </div>
 <div created="20170717183951845" modified="20180704184958199" tags="[[כשהם ישנים]] [[מתכונים טבעוניים]] ארוחות [[חיות אוכל]] מתכונים" title="שותה עם גורה">
 <pre>[img[pictures/miz-anavim.jpg]]
