--- a/index.html
+++ b/index.html
@@ -493,6 +493,8 @@ Error message and password prompt
 
 <li>גרציאני</li>
 
+<li>דאל עדשים כתומות</li>
+
 <li>דבקה</li>
 
 <li>דה וינצ'י 2</li>
@@ -828,6 +830,8 @@ Error message and password prompt
 <li>לזניה צמחונית</li>
 
 <li>לחם</li>
+
+<li>לחם תושיה שינקין</li>
 
 <li>לחמים</li>
 
@@ -9092,7 +9096,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20190221183027209" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20190306171721961" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20190307164447744" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9101,7 +9105,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[שושני שמרים]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[לחם תושיה שינקין]] [[דאל עדשים כתומות]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9121,7 +9125,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20190306145202966" title="$:/temp/search">
+<div created="20161023184814872" modified="20190307163411586" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11475,6 +11479,32 @@ Is where I want to be
 !!![[תומר]]:
 
 כשאני הולך נגד כוון השעון אני שותה את הקפה של הבוקר עם סנדביץ' קטן וטעים - למשל זה עם הנקטרינה והגבינה הלבנה בתוך לחם אגוזים - [[בגרציאני|https://easy.co.il/page/10008537]], שנמצא ביהודה הלוי מול [[הגינה|גינת קריית ספר]]. בשבת בבוקר אני לוקח גוז'רים טעימים ממש, או בורקיטס תרד, או קרואסון או לחמניות או משהו מאד טעים אחר. </pre>
+</div>
+<div created="20190307161740011" modified="20190307230829232" tags="מתכונים [[חיות אוכל]] [[מתכונים טבעוניים]]" title="דאל עדשים כתומות">
+<pre>[img[pictures/adashim-ketumot.jpg]]
+
+!!![[הצוות]]:
+
+החומרים:
+
+*1 בצל לבן קטן קצוץ
+* 4 עגבניות קטנות ובשלות חתוכות לקוביות קטנות
+*1 כוס עדשים כתומות
+*4 כוסות מים
+* כפית תבלין קארי
+* חצי כפית ג'ינג'ר מגורר
+* מלח ים גס
+*קורט פלפל שחור
+
+אופן ההכנה:
+
+1. בסיר בינוני מחממים שמן (חמניות/קנולה/תירס) ומטגנים את הבצל עד שהוא הופך שקוף
+
+2. מוסיפים את העגבניות, וממשיכים לצלות כ-20 דקות על להבה נמוכה
+
+3. מוסיפים את המים, העדשים והתבלינים, בוחשים בכף עץ ומבשלים 40 דקות עד שעה על להבה נמוכה (בוחשים מידי פעם)
+
+4. מגישי  על [[אורז לבן|אורז לבן עם צנוברים]]</pre>
 </div>
 <div created="20170905124350189" modified="20170907154115299" tags="[[אירי טוענת]]" title="דבקה">
 <pre>[img[pictures/dabke.jpg]]
@@ -13904,6 +13934,13 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 
 
 </pre>
+</div>
+<div created="20190307134032762" modified="20190307170428222" tags="[[כאן בגטו]]" title="לחם תושיה שינקין">
+<pre>[img[pictures/lechem-tushiya.jpg]]
+
+!!![[תומר]]:
+
+אם אני הולך לקניות בשעות אחר הצהריים אז זה עם [[ננו המתוקה|ננו שלי ואני]], ואנחנו חייבים לעצור [[בשינקין 53|https://easy.co.il/page/22641812]], ולקנות לחמניה רכה ומתוקה לגרגרנית הקטנה, שאוהבת את הלחמניה וגם את החיוך שמקבל את פניה. גם אני אוהב את את החיוכים הטובים, ואת הלחמים הרכים והעדינים. לרוב אני קונה לחם חמניות או את לחם הכוסמין שיבולת שועל, ואפשר גם לקחת חצי כיכר!</pre>
 </div>
 <div created="20180713195240465" modified="20180722161411242" tags="[[כאן בגטו]] [[חיות אוכל]]" title="לחמים">
 <pre>[img[pictures/breads.jpg]]
