בשדרה בדרך הביתה, חלון אחורי

--- a/index.html
+++ b/index.html
@@ -415,6 +415,8 @@ Error message and password prompt
 
 <li>בשביל הפרחים</li>
 
+<li>בשדרה בדרך הביתה</li>
+
 <li>בתה וגריגה</li>
 
 <li>בתים</li>
@@ -662,6 +664,8 @@ Error message and password prompt
 <li>חינאווי</li>
 
 <li>חלומות שחלמנו</li>
+
+<li>חלון אחורי</li>
 
 <li>חמאת שום ועשבי תיבול</li>
 
@@ -9096,7 +9100,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20190221183027209" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20190307164447744" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20190309074207748" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9105,7 +9109,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[לחם תושיה שינקין]] [[דאל עדשים כתומות]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[חלון אחורי]] [[בשדרה בדרך הביתה]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10595,6 +10599,14 @@ Is where I want to be
 !!![[תומר]]:
 
 [[חנות הפרחים|http://bishvil-haprachim.co.il/]] המתוקה והיפה ביותר עם הפרחים והסידורים והכלים היפים ביותר בעיר כולה.</pre>
+</div>
+<div created="20190308172649378" modified="20190309101448489" tags="[[כאן בגטו]] ילדים [[מטא בדיון]] [[סיפורים אמיתיים]]" title="בשדרה בדרך הביתה">
+<pre>
+[img[pictures/basdera.jpg]]
+
+!!![[תומר]]:
+
+אחרי [[הלחמניה|לחם תושיה שינקין]], אחרי [[שורצקי]], אחרי [[שרלי|שיח קפה]], אנחנו עולים חזרה לשדרה, תיכף נפנה ימינה לחשמונאים, והנה מגיעים.</pre>
 </div>
 <div created="20190227173320579" modified="20190305121845753" tags="[[כאן בגטו]] מסעדות [[מטא בדיון]]" title="בתה וגריגה">
 <pre>[img[pictures/beta-ve-grega.jpg]]
@@ -12621,6 +12633,14 @@ CJ, הקשוחה שבחבורה. ימאית, מתבודדת, חשדנית. זו 
 &lt;&lt;list-links filter:&quot;[tag[חלומות שחלמנו]]&quot;&gt;&gt;
 
 </pre>
+</div>
+<div created="20190309100625286" modified="20190309101750039" tags="[[כאן בגטו]] סרטים [[סיפורים אמיתיים]]" title="חלון אחורי">
+<pre>
+[img[pictures/rear-window.jpg]]
+
+!!![[תומר]]:
+
+[[בחלון האחורי|https://www.imdb.com/title/tt0047396/]] שלנו רק שומעים את יהודה הלוי ואת החשמונאים ואת עובדי [[התמ&quot;א|https://he.wikipedia.org/wiki/%D7%AA%D7%9E%22%D7%90_38]], ובלילה שומעים בחורות ובחורים ששרים ומנגנים בגיטרה.</pre>
 </div>
 <div created="20170422160814236" modified="20180605132739043" tags="[[המטבח על פי ז'נבייב]] מתכונים" title="חמאת שום ועשבי תיבול">
 <pre>[img[pictures/genevieve-green-butter.jpg]]
